Revision history for Datahub-Factory-VKC

{{$NEXT}}

1.00  2018-09-03 14:18:59 CEST

    - Stable release.

0.100  2018-09-03 14:10:29 CEST

    - Changed: Added missing indexes on the CITvgsrpObjTombstoneD_RO table.
    - Changed: Skip record if no LidoRecID is available.

0.99  2018-08-01 16:24:13 CEST

    - Changed: Yanked out SQL code and put in separate SQL file.

0.98  2018-06-20 16:33:07 CEST

    - Changed: updated KMSKA modules for TMS 2017.

0.97  2018-05-03 15:27:40 CEST

    - Fixed: Fixes #2 Multiple LidoRecID's.

0.96  2017-12-06 13:51:39 CET

    - Fixed: Added missing prereqs as reported by CPANTS

0.95  2017-12-05 10:01:27 CET

    - Changed: removed stale PID module code.
    - Changed: removed creating temporary SQLite databases from EIZ module.

0.94  2017-11-13 11:28:19 CET

    - Changed: reverted back to 0.92 changes because bugs.

0.93  2017-11-08 13:17:10 CET

    - Added: added generate_temp_tables and generate_vocabularies plugin options.
    - Changed: remove stale PID module.
    - Changed: added AAT & Creators SQLite generation to KMSKA module.

0.92  2017-09-06 10:59:08 CEST

    - Changed: updated documentation and licensing

0.91  2017-09-05 14:18:12 CEST

    - Changed: improved import headers and our $VERSION.
    - Changed: minimal required version of Datahub::Factory is 1.70.
    - Added: a dist.ini for dist / dzil milla
    - fixed: missing Catmandu::Adlib dependency
    - changed: moved TMS::Index to a dedicated KMSKA namespace
    - added: missing dependency DBD::mysql

0.9  2017-06-08 11:27:39 CEST
    - changed: conform to new Catmandu::Store::Datahub API
    - added: Arthub Exporter module
    - changed: disabled Rackspace and Webfile support. Only local file supported. PIDs should be part of the registration system.
    - renamed: MSK importer to EIZ (ErfgoedInzicht) importer
    - changed: break if no CSV file was found
    - added: missing dependencies
    - updated: CHANGES file
    - added: missing required modules
