@@ -2,6 +2,8 @@ Revision history for Datahub-Factory-VKC
 
 {{$NEXT}}
 
+    - Changed: added objtitles table as sqlite.
+
 1.00  2018-09-03 14:18:59 CEST
 
     - Stable release.
